tests/invalid/Final_Invalid_12.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    if x >= 0:
        y = x
    //    
    y = 0
    //
    return y